--- a/src/app/views/pages/admin/historique/historique.component.html
+++ b/src/app/views/pages/admin/historique/historique.component.html
@@ -33,12 +33,12 @@
               <td>{{hist.id}}</td>
               <td>{{hist.kilometres}}</td>
               <td>{{hist.prix}}</td>
-              <td>{{hist.date_remorquage}}</td>
+              <td>{{hist.dateRemorquage}}</td>
          
               <td>
-              <button type="button" class="btn btn-danger btn-icon"> <i data-feather="eye"></i> </button>&nbsp;
-              <a  type="button" class="btn btn-warning btn-icon"> <i data-feather="edit"></i> </a>&nbsp;
-              <a  type="button" class="btn btn-primary btn-icon"> <i data-feather="delete"></i></a>
+              <button  class="btn btn-sm btn-info"> <i id="myicon1" class="fa fa-search"></i>Details</button>
+              <button  class="btn btn-sm btn-warning"> <i id="myicon2" class="fa fa-edit"></i>Modifier</button>
+              <button  class="btn btn-sm btn-danger"> <i id="myicon3" class="fa fa-remove"></i>Supprimer</button>
               </td>
               </tr>
 
