--- a/src/app/views/pages/auth/register/register.component.html
+++ b/src/app/views/pages/auth/register/register.component.html
@@ -3,80 +3,78 @@
     <div class="card">
       <div class="row">
         <div class="col-md-4 pe-md-0">
-          <div class="auth-side-wrapper" [ngStyle]="{ 'background-image': 'url(https://via.placeholder.com/219x452)' }">
-
-          </div>
+         
         </div>
         <div class="col-md-8 ps-md-0">
           <div class="auth-form-wrapper px-4 py-5">
-            <a routerLink="." class="nobleui-logo d-block mb-2">Noble<span>UI</span></a>
-            <h5 class="text-muted fw-normal mb-4">Create a free account.</h5>
+            <a routerLink="." class="nobleui-logo d-block mb-2"><span></span></a>
+            <h5 class="text-muted fw-normal mb-4">
+              Créer un compte gratuit.</h5>
             <form class="forms-sample" (ngSubmit)="submit()" [formGroup]="form">
               <div class="mb-3">
-                <label for="exampleInputUsername1" class="form-label">Username</label>
+                <label for="exampleInputUsername1" class="form-label">
+                  Nom d'utilisateur</label>
                 <input type="text" formControlName="name" name="name" class="form-control"
-                placeholder="Enter Name" [ngClass]="{'is-invalid': submitted && f.name.errors}">
+                placeholder="Entrer Name" [ngClass]="{'is-invalid': submitted && f.name.errors}">
 
               <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
               <div *ngIf="f.name.errors.required">
-                Name is required
+                Le nom est requis
+
               </div>
           </div>    </div>
               <div class="mb-3">
+                <label for="exampleInputUsername1" class="form-label">
+                  Email</label>
                 <input type="text" formControlName="email" name="email" class="form-control"
-                placeholder="Enter email" [ngClass]="{'is-invalid': submitted && f.email.errors}">
+                placeholder="Entrer email" [ngClass]="{'is-invalid': submitted && f.email.errors}">
 
                 <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                   <div *ngIf="f.email.errors.required">
-                    Email is required
+                    E-mail est requis
                   </div>
                   <div *ngIf="f.email.errors.email">
-                    Email must be a valid email address
+                    E-mail doit être une adresse e-mail valide
                    </div>
               </div></div>
 
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <label for="exampleInputPassword1" class="form-label">Mot de passe</label>
                 <input type="password" formControlName="password" name="password" class="form-control"
-                placeholder="Enter password" [ngClass]="{'is-invalid': submitted && f.password.errors}">
+                placeholder="Entrer mot de passe" [ngClass]="{'is-invalid': submitted && f.password.errors}">
 
                 <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                   <div *ngIf="f.password.errors.required">
-                    Password is required
+                    Mot de passe est requis
                   </div>
                   <div *ngIf="f.password.errors.minlength">
-                    Password must be atleast 6 characters
+                   Le mot de passe doit être au moins de 6 caractère
                    </div>
               </div></div>
 
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Confirm Password</label>
+                <label for="exampleInputPassword1" class="form-label">Confirmer mot de passe</label>
                 <input type="text" formControlName="confirmPassword" name="confirmPassword" class="form-control"
-                placeholder="Enter confirmPassword" [ngClass]="{'is-invalid': submitted && f.confirmPassword.errors}">
+                placeholder="Entrer Mot de passe de confirmation" [ngClass]="{'is-invalid': submitted && f.confirmPassword.errors}">
 
                 <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
                   <div *ngIf="f.confirmPassword.errors.required">
-                    confirm password is required
+                    Mot de passe de confirmation est requis
                   </div>
                   <div *ngIf="f.confirmPassword.errors.mustMatch">
-                    Password must Match
+                    Le mot de passe doit correspondre
                    </div>
               </div></div>
 
               <div class="form-check mb-3">
                 <input type="checkbox" class="form-check-input" id="authCheck">
                 <label class="form-check-label" for="authCheck">
-                  Remember me
+                Souviens-moi
                 </label>
               </div>
-              <div>
-                <button type="submit" class="btn btn-primary me-2 mb-2 mb-md-0" >Sign up</button>
-                <button type="button" class="btn btn-outline-primary btn-icon-text mb-2 mb-md-0">
-                  <i class="feather icon-twitter btn-icon-prepend"></i>
-                  Sign up with twitter
-                </button>
-              </div>
-              <a routerLink="/auth/login" class="d-block mt-3 text-muted">Already a user? Sign in</a>
+             
+              
+              <a routerLink="/auth/login" class="d-block mt-3 text-muted">Déjà utilisateur ? Se connecter</a>
             </form>
           </div>
         </div>
