--- a/src/app/views/layout/dashboardadmin/adminhome/adminhome.component.html
+++ b/src/app/views/layout/dashboardadmin/adminhome/adminhome.component.html
@@ -55,7 +55,7 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-baseline">
-              <h6 class="card-title mb-0">Nouveax Demandes</h6>
+              <h6 class="card-title mb-0">Nouvelles Demandes</h6>
          
             </div>
             <div class="row">
@@ -87,7 +87,7 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-baseline">
-              <h6 class="card-title mb-0">Revenues</h6>
+              <h6 class="card-title mb-0">Revenus</h6>
              
             </div>
             <div class="row">
