--- a/src/app/views/pages/admin/listclient/listclient.component.html
+++ b/src/app/views/pages/admin/listclient/listclient.component.html
@@ -42,7 +42,11 @@
               <td>{{user.etat}}</td>
               <td>
                 <button  class="btn btn-sm btn-info"> <i id="myicon1" class="fa fa-search"></i>Details</button>
-                <button  class="btn btn-sm btn-warning"> <i id="myicon2" class="fa fa-edit"></i>Modifier</button>
+                <button  class="btn btn-sm btn-warning"> <i id="myicon2" class="fa fa-edit"></i>
+                  <a routerLink="/admin/edit/{{ user.id }}" type="button">
+                    Modifier
+                  </a>
+                </button>
                 <button  class="btn btn-sm btn-danger"> <i id="myicon3" class="fa fa-remove"></i>Supprimer</button>
               </tr>
 
