--- a/src/app/views/pages/admin/historique/historique.component.html
+++ b/src/app/views/pages/admin/historique/historique.component.html
@@ -39,9 +39,7 @@
                   </button>
                   <button class="btn btn-sm btn-warning">
                     <i id="myicon2" class="fa fa-edit"></i>
-                    <a routerLink="/admin/edit/{{ user.id }}" type="button"
-                      >Modifier</a
-                    >
+                    Modifer
                   </button>
                   <button class="btn btn-sm btn-danger">
                     <i id="myicon3" class="fa fa-remove"></i>Supprimer
