--- a/src/app/views/pages/editcamion/editcamion.component.html
+++ b/src/app/views/pages/editcamion/editcamion.component.html
@@ -1,1 +1,1 @@
-<p>editcamion works!</p>
+<app-editprofile [titre]="edit Camion" [item1]="Modele" [item2]="Matricule" [item3]="Color"></app-editprofile>
