--- a/src/app/views/pages/admin/listchauffeur/listchauffeur.component.html
+++ b/src/app/views/pages/admin/listchauffeur/listchauffeur.component.html
@@ -39,7 +39,11 @@
               <td>Actif</td>
               <td>
                 <button  class="btn btn-sm btn-info"> <i id="myicon1" class="fa fa-search"></i>Details</button>
-                <button  class="btn btn-sm btn-warning"> <i id="myicon2" class="fa fa-edit"></i>Modifier</button>
+                <button  class="btn btn-sm btn-warning"> <i id="myicon2" class="fa fa-edit"></i>
+                  <a routerLink="/admin/edit/{{ chauffeur.id }}" type="button">
+                    Modifier
+                  </a>
+                </button>
                 <button  class="btn btn-sm btn-danger"> <i id="myicon3" class="fa fa-remove"></i>Supprimer</button>
               </td>
               </tr>
