--- a/src/app/views/pages/editprofile/editprofile.component.html
+++ b/src/app/views/pages/editprofile/editprofile.component.html
@@ -1,27 +1,27 @@
 <nav class="page-breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a routerLink=".">Admin</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Modifier Profile</li>
+    <li class="breadcrumb-item active" aria-current="page">{{titre}}</li>
   </ol>
 </nav>
 <div class="row"></div>
 <div class="col-md-6 grid-margin stretch-card">
   <div class="card">
     <div class="card-body">
-      <h6 class="card-title">Modifier Profile</h6>
+      <h6 class="card-title">{{titre}}</h6>
       <form (ngSubmit)="updateEmployee()" class="forms-sample">
         <div class="form-group row">
-          <label for="name" class="col-md-3 col-form-label text-md-right">Name :</label>
+          <label for="name" class="col-md-3 col-form-label text-md-right">{{item1}} :</label>
           <div class="col-md-6">
           <input type="text" name="name" class="form-control" [(ngModel)]="user.name">
        </div></div>
        <div class="form-group row">
-        <label for="name" class="col-md-3 col-form-label text-md-right">Email :</label>
+        <label for="name" class="col-md-3 col-form-label text-md-right">{{item2}} :</label>
         <div class="col-md-6">
         <input type="text" name="email" class="form-control" [(ngModel)]="user.email">
      </div></div>
      <div class="form-group row">
-      <label for="name" class="col-md-3 col-form-label text-md-right">Username :</label>
+      <label for="name" class="col-md-3 col-form-label text-md-right">{{item3}} :</label>
       <div class="col-md-6">
       <input type="text" name="username" class="form-control" [(ngModel)]="user.username">
    </div></div>
