--- a/src/app/views/pages/admin/listchauffeur/listchauffeur.component.html
+++ b/src/app/views/pages/admin/listchauffeur/listchauffeur.component.html
@@ -40,7 +40,7 @@
               <td>
                 <button  class="btn btn-sm btn-info"> <i id="myicon1" class="fa fa-search"></i>Details</button>
                 <button  class="btn btn-sm btn-warning"> <i id="myicon2" class="fa fa-edit"></i>
-                  <a routerLink="/admin/edit/{{ chauffeur.id }}" type="button">
+                  <a routerLink="/admin/editChauffeur/{{ chauffeur.id }}" type="button">
                     Modifier
                   </a>
                 </button>
