--- a/src/app/views/pages/admin/listvehicule/listvehicule.component.html
+++ b/src/app/views/pages/admin/listvehicule/listvehicule.component.html
@@ -39,7 +39,7 @@
               <td>
                 <button  class="btn btn-sm btn-info"> <i id="myicon1" class="fa fa-search"></i>Details</button>
                 <button  class="btn btn-sm btn-warning"> <i id="myicon2" class="fa fa-edit"></i>
-                  <a routerLink="/admin/editcamion/{{ voiture.id }}" type="button">
+                  <a routerLink="/admin/editVoiture/{{ voiture.id }}" type="button">
                     Modifier
                   </a>
                 </button>
