--- a/src/app/views/pages/edit-chauffeur/edit-chauffeur.component.html
+++ b/src/app/views/pages/edit-chauffeur/edit-chauffeur.component.html
@@ -1,1 +1,1 @@
-<app-editprofile [titre]="'Modifier'" [item1]="'Nom'" [item2]="'Email'" [item3]="'Telephone'"></app-editprofile>
+<app-editprofile [titre]="'Modifier'" [item1]="'Nom'" [item2]="'Email'" [item3]="'Telephone'" [typeItem]="3"></app-editprofile>
